1. Use Log4j2 annotation processor. 2. Fix Java module in log4j3 test